# cortexd

./: .gitignore  Cargo.toml  README.md  compass_artifact_wf-891cb8e4-8864-4628-82f0-056b00100ff9_text_markdown.md  cortexd-technical-reference.md  neurond-technical-reference.md  policy.toml  workflow.md
src/: config.rs  main.rs  router.rs
src/engine/: audit.rs  mod.rs  server.rs
src/federation/: connection.rs  lifecycle.rs  mod.rs  namespace.rs  transport.rs
src/linux/: desktop.rs  mod.rs  network.rs  systemd.rs
src/native/: file.rs  hardware.rs  identity.rs  mod.rs  network.rs  schedule.rs  security.rs  service.rs  system.rs  time.rs
src/providers/: container.rs  desktop.rs  file.rs  log.rs  mod.rs  network.rs  package.rs  process.rs  service.rs  storage.rs  system.rs
src/security/: audit.rs  mod.rs  policy.rs
src/upstream/: server.rs
tasks/: todo.md
